# FastApi-Project-Base

./: .gitignore  docker-compose.yml
backend/: dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/api/: dependencies.py  middleware.py
backend/api/routers/: auth.py  healthcheck.py  user.py
backend/background/: broker.py  celery_app.py
backend/cache/: redis_cache_backend.py
backend/config/: settings.py
backend/db/: database.py  unitofwork.py
backend/db/repositories/: base.py  user.py
backend/exceptions/: auth.py  base.py  user.py
backend/integrations/: hashing.py  jwt.py  jwt_auth.py
backend/models/: user.py
backend/schemas/: auth.py  user.py
backend/services/: auth.py  user.py
grafana/dashboards/: dashboards.yml  fastapi_dashboard.json
grafana/datasources/: datasources.yml
nginx/: nginx.conf
prometheus/: prometheus.yml
