
[project]
name = "cafe-drink-recommendations"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.138.2",
    "flower>=2.0.1",
    "greenlet>=3.5.3",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "pyjwt>=2.13.0",
]
