
[project]
name = "cafe-drink-recommendations"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.138.2",
    "flower>=2.0.1",
    "greenlet>=3.5.3",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "pyjwt>=2.13.0",
    "redis>=8.0.1",
    "bcrypt>=5.0.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
]
